Font color and size is changing of individual svgs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="share">Share</string>
+    <string name="spacing">Spacing</string>
+    <string name="size">Size :</string>
 </resources>
